--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "pinia": "^2.0.32",
+    "sass": "^1.60.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
