--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "firebase": "^10.5.0",
     "pinia": "^2.0.32",
     "sass": "^1.60.0",
     "vue": "^3.2.47",
